@@ -423,7 +423,7 @@ DIST firefox-78.0.2.source.tar.xz 334406116 BLAKE2B ecddeee641a61409cf603afe97c3
 EBUILD firefox-70.0.1.ebuild 29924 BLAKE2B d4a849c6d5ccd1a68eb145c49a0275e03dbb115842e05981408d35f14c6e194426dace48d086930f9f2dc26bd00173591ff6fceb31cbb4770476440aa1942c27 SHA512 bec3ccf5df0fe6deb66a43071f6dd87b4835cbdcff4d1c18d1189cb57a6c8d79377bc6ddfbf3bcb82e5b6fb5f8cd6e3a69e9e7a7782ad7b0693e5838996dfa62
 EBUILD firefox-72.0.2.ebuild 30859 BLAKE2B 1310d943ff916479ce8ca23cfaf964845476f9c895ff05607422c35181b1f4e8b00a9882fe206e66bcb5fd2dfd717d504c9c8de5bd4b5e08b2c19c556716392c SHA512 bf907da507c542b300f64346ad5fad9c3070504091af4662dbf794e771737307b3b9442853ec6c40dbd1d25c7ef921bc5f136cbe4318268403aa2c7dbedc4677
 EBUILD firefox-77.0.1-r1.ebuild 32901 BLAKE2B fc71e6d793b90b0fc2aa22bb82c82fed337b15655b8fa39fc4aa68fdf1a53e69e1a4d8dace0656ba5b053ca11b39ff27cc464002801f7ac1ff0749d3027a2810 SHA512 68c57f8e41a99aec812d56d07aaf792ffd7bd6c7a7ca8bf64d48c521ef9a20cf6a3731213e3fa098e81104d376d8a5a7c948e813ef78fba92d082b26b555c61d
-EBUILD firefox-78.0.2-r1.ebuild 34434 BLAKE2B 982778da741b8b948cae6db8e803a5ae6e352837eef7ce8f97b76089b120797d21bd13a52c4d75664c53ec0844c8abf8cb6250b1e2b66042ecfdfde064bdc38c SHA512 dc5780569b59c52d72115271f1bc34995967f0869e680caf5fbaa84a8be32e7709d636d78296eed590aefbe38afea8698e437013a5281c7bc1f32b841d9ba750
-MISC ChangeLog 3004 BLAKE2B eaf64858f289837fb3b0eb9c3c3b79305252c81608b59137d4cf06a171b1d68e6e75d85cefd4fd7efcc851d47fdbdc7854574761e2a81557a2b05ae93af30c0e SHA512 e5d39ba79680dab44173e4ea5fa99d3fda5174fdbe24b102081371ac389cf7d792fa035deed9124dbae4b96667570e9d6a12315a54b86632519a56699d297d92
+EBUILD firefox-78.0.2-r1.ebuild 34464 BLAKE2B 1cd5a242f11350912f49c65f2b57f0f30d177fc64362f9fe4361d3e450e9ce0d933c91e1fdf572b340febb4e842c935dd4a02664acd4b4b0d66a272929e250da SHA512 d89f5e3bba87b96fbe7a189e08b420c4e06a6ec490ab04059157b3f086efc35ec59ac0d299319a077ca4425837d0efed7a3e5d6c34ac33034ad1de4228fcd5c9
+MISC ChangeLog 3128 BLAKE2B 5b913ce4d62d90d85786f791a54505a44a93facdf7a45f898e5f264b30aa1bc78aa7eb2edf0b82fd5cf0c0365110e4562b319dec2005deca54f9736918fca17e SHA512 bf23b4b1334ed1e67721147e40957484d2b86d6ab01016fb0858dd87dc9efb2a6d682ad7fa1c2d5db09195d014911c307f7c4e7a2ac26b5f82c3de6d75a89767
 MISC firefox-62.0-r2 22407 BLAKE2B f3bc12921a49d0d70e4d3c7eaa76ce5e659908099b5b43832f5558f7f6b3ec2042a91dcffd53930ff31710099fd332ebb6a44576936bcfa6d46b61637c4ae132 SHA512 82a2aa6f7e97d01b75b978f2c4da034df1d3315b994cdcc24f055df6b557e1b3bbd9c114616a1895a14672acc3620719c920e4021397d605949f14549db7e284
-MISC metadata.xml 3061 BLAKE2B 57607805a61d814e32e58881d56d30f99b90afd217e032ee4f9cfac2de182130dcb5eb88cf4d2745c3dfaa0c56986272560ea9d59547931b2a393cf60cfb6582 SHA512 a9b4d9999819e74096db264a93b9e4bf1af9f577cf15dbe3092f2c3b467529d981489cce690b9763633a6239d1cc80e4614c39aad484279c6b460977ecbd5c10
+MISC metadata.xml 3396 BLAKE2B 295444831490a0c62e31a82c156053e8a49b301d1ef144f01a4c14efd559fbcf92468e47592eb1f801d90a2245894160359469b5cae4b136c67883e64e9cb97c SHA512 d97e9dbbadd8197df709dab8b410bdb1f76335deab95d5a0c40251e6f237b7c6b77c40db77e062ffad10879a34388c223b1ff91e2e1ea81cf1c6f3c8dd08d8ca
